Add single image Docker setup with unified configuration for frontend and backend
- Introduced `docker-compose.single.yml` for simplified deployment.
- Added `Dockerfile` for multi-stage build of frontend and backend.
- Implemented health checks and process management using Supervisor.
- Updated `docker.sh` script to support single image commands.
- Enhanced README with instructions for single image setup and usage.
- Added necessary configuration files for Nginx and Supervisor.
- Updated package.json files for backend and frontend with descriptions and licenses.

--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "@fake-smtp-server/root",
+  "version": "1.0.0",
+  "description": "A monorepo containing a fake SMTP server with a React frontend and NestJS backend for testing email functionality",
+  "license": "MIT",
   "private": false,
   "workspaces": [
     "packages/*"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "concurrently": "^9.1.2"
+  },
   "scripts": {
     "dev:backend": "lerna run start:dev --scope=@fake-smtp-server/backend",
-    "dev:frontend": "lerna run dev --scope=@fake-smtp-server/frontend"
+    "dev:frontend": "lerna run dev --scope=@fake-smtp-server/frontend",
+    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\""
   },
   "devDependencies": {
     "lerna": "^8.2.2"
