--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@fake-smtp-server/backend",
   "version": "0.0.1",
-  "description": "",
+  "description": "NestJS backend for the fake SMTP server application",
   "author": "",
-  "private": true,
-  "license": "UNLICENSED",
+  "private": false,
+  "license": "MIT",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
