Refactor Docker setup for simplified deployment and enhance README
- Updated `docker-compose.single.yml` to use pre-built image for the fake SMTP server.
- Added port mapping for SMTP server in `docker-compose.yml`.
- Enhanced README to clarify deployment options and provide detailed instructions for using the single image setup.
- Updated Dockerfile to expose both application and SMTP ports.
- Improved organization of Docker commands and service descriptions in the documentation.

--- a/docker-compose.single.yml
+++ b/docker-compose.single.yml
@@ -2,11 +2,7 @@ version: "3.8"
 
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-      args:
-        REFRESH_INTERVAL: 3000
+    image: phamtanminhtien/fake-smtp-server:latest
     container_name: fake-smtp-server
     restart: unless-stopped
     ports:
