--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
     "mailparser": "^3.7.3",
+    "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "smtp-server": "^3.13.7",
@@ -43,6 +44,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/mailparser": "^3.4.6",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.7",
     "@types/smtp-server": "^3.5.10",
     "@types/supertest": "^6.0.2",
